--- a/nosotros.html
+++ b/nosotros.html
@@ -42,17 +42,19 @@
         </nav>
     </header>
     <!--¿Quienes somos?-->
-    <section id="quienes-somos" style="padding: 2em; background-color: white;">
+    <section class="quienes"> 
         <h2 style="font-size: 2em; color: #FFBF00; text-align: center;">¿QUIÉNES SOMOS?</h2>
         <div class="historia">
-            <p style="font-size: 1.2em; color: #555; line-height: 1.6; text-align: center; padding: 0px;">
+            <p>
                 Somos una tienda Veracruzana apasionada por la belleza de los girasoles. Creemos que los girasoles no solo representan la alegría y la luz, sino que también aportan un toque especial de energía y calidez a cualquier espacio. 
                 <br>Nuestra misión es llevar esta energía a tu hogar, ofreciendo girasoles frescos y de alta calidad, cultivados con amor y dedicación.
                 <br>Nos enorgullece trabajar de la mano con agricultores locales, garantizando que cada girasol que llega a ti sea el mejor. Ya sea para regalar, decorar, o simplemente para disfrutar de su belleza, estamos aquí para ayudarte a llenar de luz tus momentos especiales.
             </p>
         </div>
+    </section>
 
-        <h1 class="tithistoria">NUESTRA HISTORIA</h1>
+    <h1 class="tithistoria">NUESTRA HISTORIA</h1>
+    <section class="histo">
         <div class="historia">
             <p>Estoy feliz de que nos hayas elegido para hacer especial tu momento. Soy Diana y junto con mi equipo hemos creado este emprendimiento con mucho amor. <br> Siempre he sentido una conexión especial con los girasoles. Desde que era niña, me fascinaban su color vibrante y cómo siempre parecían buscar la luz. Para mí, los girasoles representan alegría, esperanza y gratitud, valores que siempre intento compartir con las personas que amo. Por eso, cada vez que había un cumpleaños, un aniversario o cualquier momento especial, me esmeraba en buscar detalles únicos para regalar. Pero, sin importar cuánto buscara, siempre terminaba regresando a los girasoles.  
 
@@ -64,7 +66,9 @@
                 
                 Hoy, mi tienda es más que un negocio: es un reflejo de lo que amo y una forma de iluminar la vida de otros con algo tan sencillo y hermoso como un girasol.  
             </p>
-            <img src="https://i.pinimg.com/736x/e1/a4/de/e1a4de1db6e6bbf1b5c1876e0b24300d.jpg" alt="">
+            <div class="image">
+                <img src="https://i.pinimg.com/736x/e1/a4/de/e1a4de1db6e6bbf1b5c1876e0b24300d.jpg" alt="">
+            </div>
         </div>
     </section>
 
